--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,101 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+li{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+.row{
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
+.container{
+  padding: 50px 0;
+  width: 100%;
+}
+
+
+/*
+
+LANDING PAGE
+
+*/
+.gold{
+  color: #b89e63;
+}
+
+.header{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  padding: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+.title{
+  font-size: 60px;
+  margin-bottom: 24px;
+  text-align: center;
+  line-height: 1.25;
+}
+
+.header__para{
+  font-size: 40px;
+  margin-bottom: 24px;
+  text-align: center;
+  line-height: 1.25;
+}
+
+/*
+
+NAV BAR
+
+*/
+#hyrule-logo{
+  width: 430px;
+  height: 155px;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  height: 150px;
+  padding: 0 20px;
+}
+
+.nav__link--list{
+  display: flex;
+}
+
+.nav__link{
+  margin: 0 12px;
+}
+
+.nav__link--anchor{
+  font-size: 16px;
+  color: #000;
+  font: 700;
 }
