--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,28 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.background__img{
+  position: fixed;
+  z-index: -1;
+  background-image: url(/assets/cropped-1920-1080-710940.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  filter: blur(2px) !important;
+}
+
+section{
+  z-index: 9999;
+}
+
 html{
   scroll-behavior: smooth;
 }
 
 li{
   list-style-type: none;
+  
 }
 
 a{
@@ -31,30 +47,66 @@ a{
   width: 100%;
 }
 
+input, text{
+  width: 100%;
+  height: 48px;
+  border-radius: 12px;
+  border: none;
+  font-size: 16px;
+  font-weight: 700;
+  color: rgb(245, 245, 245);
+  background-color: rgba(255, 255, 255, 0.1);
+  outline: none;
+  
+}
 
+input{
+  padding: 0 12px;
+}
+
+.fa-magnifying-glass{
+  width: 20px;
+  height: 20px;
+}
 /*
 
 LANDING PAGE
 
 */
+.bg__img{
+  z-index: -1;
+}
+
 .gold{
   color: #b89e63;
 }
 
 .header{
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   width: 100%;
-  padding: 12px;
+  padding: 12px 12px 0 12px;
+  display: flex;
+  margin-top: 24px;
+  height: 80vh;
+}
+
+.header__content{
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.header__top{
+  display: flex;
   align-items: center;
   flex-direction: column;
 }
 
 .title{
   font-size: 60px;
+  color: rgb(240, 240, 240);
   margin-bottom: 24px;
   text-align: center;
   line-height: 1.25;
@@ -62,9 +114,20 @@ LANDING PAGE
 
 .header__para{
   font-size: 40px;
+  color: rgb(240, 240, 240);
   margin-bottom: 24px;
   text-align: center;
   line-height: 1.25;
+}
+
+.input__wrapper{
+  margin-top: 48px;
+  width: 600px;
+  display: flex;
+}
+
+.footer__img{
+  width: 200px;
 }
 
 /*
@@ -76,6 +139,7 @@ NAV BAR
   width: 430px;
   height: 155px;
 }
+
 nav{
   display: flex;
   justify-content: space-between;
@@ -84,6 +148,7 @@ nav{
   margin: 0 auto;
   height: 150px;
   padding: 0 20px;
+  margin-bottom: 12px;
 }
 
 .nav__link--list{
@@ -95,7 +160,7 @@ nav{
 }
 
 .nav__link--anchor{
-  font-size: 16px;
-  color: #000;
-  font: 700;
+  font-size: 18px;
+  color: rgb(240, 240, 240);
+  font-weight: 400;
 }
