--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,9 @@ a{
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .container{
@@ -57,17 +59,16 @@ input, text{
   color: rgb(245, 245, 245);
   background-color: rgba(255, 255, 255, 0.1);
   outline: none;
-  
+}
+
+input::placeholder{
+  color: rgb(245, 245, 245);
 }
 
 input{
   padding: 0 12px;
 }
 
-.fa-magnifying-glass{
-  width: 20px;
-  height: 20px;
-}
 /*
 
 LANDING PAGE
@@ -120,14 +121,39 @@ LANDING PAGE
   line-height: 1.25;
 }
 
+.footer__img{
+  width: 200px;
+}
+
+/*
+
+SEARCH BAR
+
+*/
 .input__wrapper{
   margin-top: 48px;
   width: 600px;
   display: flex;
+  align-items: center;
 }
 
-.footer__img{
-  width: 200px;
+.search__button{
+  width: 120px;
+  height: 48px;
+  display: flex;
+  margin-left: 12px;
+  border-radius: 12px;
+  border: none;
+  background-color: #b89e63;
+  outline: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.magnifying-glass{
+  width: 32px;
+  height: 32px;
+  filter: invert(1);
 }
 
 /*
@@ -136,8 +162,8 @@ NAV BAR
 
 */
 #hyrule-logo{
-  width: 430px;
-  height: 155px;
+  width: 270px;
+  height: 100px;
 }
 
 nav{
