--- a/styles.css
+++ b/styles.css
@@ -246,13 +246,18 @@ padding: 1px;
 
 .object-card{
   background-color: rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   color: rgb(245, 245, 245);
   margin: 10px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .object-card__container{
   padding: 8px 24px;
   margin: 36px 0;
+  border-radius: 8px;
+  box-shadow: 2px 6px 6px 6px rgba(0, 0, 0, 0.15);
+}
+
+.info{
+  text-transform: lowercase;
 }
